# vipunen-market-analysis

./: .gitignore  README.md  README_education_market_analysis.md  WORKFLOW.md  analysis_notebook.ipynb  analysis_notebook.py  analyze_education_market.py  check_excel.py  config.yaml  environment.yaml  heatmap_test.py  pyproject.toml  pytest.ini  run_analysis.py
backup/: vipunen_analyysi_notebook.py
data/styles/: ri_multipage_overview.mplstyle  ri_right_edge_plot_style.mplstyle
data/templates/: ri_pohja21_vipunen.pptx
docs/: CLI_GUIDE.md  DATA_REQUIREMENTS.md  EXCEL_EXPORT.md  FILEUTILS_INTEGRATION.md  INDEX.md  MARKET_ANALYSIS.md  PROGRAMMATIC_USAGE.md  README.md  TUTORIAL.md  VIPUNEN_API.md  VISUALIZATION.md  WORKFLOW.md  changes  fileutils_next.md
notebooks/: README.md  analysis_notebook_grouped.ipynb  vipunen_analysis_example.py  vipunen_analyysi_notebook.ipynb  vipunen_api_kyselyt_v2.ipynb  vipunen_market_analysis_notebook.ipynb  vipunen_market_analysis_notebook.py
src/scripts/: education_market_analysis.py  education_market_analysis_backup.py  fetch_data.py  run_analysis.py
src/vipunen/: README.md  config.py  main.py  refactoring_proposal.py
src/vipunen/analysis/: __init__.py  education_market.py  growth.py  market.py  (+4 more)
tests/: README.md  __init__.py  conftest.py  setup.py  test_analysis_pipeline.py  test_analyze_education_market.py  test_api_client.py  test_data_preparation.py  test_data_processor.py  test_fetch_data_script.py  test_market_analyzer.py  test_market_share_analyzer.py  test_qualification_analyzer.py  test_real_data.py  test_volume_plots.py
(+38 files in other folders)
