[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vipunen_market_analysis"
version = "0.1.0"
authors = [
  { name="Topi Jarvinen" },
]
description = "A tool for fetching and analyzing data from the Vipunen API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["vipunen*"]
namespaces = false 